# rgc-counter

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  TESTING.md  atlas_reference.example.csv  config.yaml  main.py  manual_roi.py  phenotype_rules.example.yaml  phenotype_rules.v2.example.yaml  pip_install_log.txt  pyproject.toml  requirements-stardist.txt  requirements-ui.txt  requirements.txt  run_pipeline.bat  run_pipeline.sh  run_pipeline_log.txt
docs/: model-training.md  paper-workflow.md  private_benchmark_lane.md  researcher-guide.md  stats-designs.md
examples/: README.md
scripts/: annotate_roi_points.py  assign_full_image_points_to_rois.py  audit_count_spatial_consistency.py  audit_micro_roi_benchmark.py  audit_roi_benchmark.py  audit_spatial_curve_validity.py  build_paper_evidence.py  check_advisor_packet_consistency.py  curate_point_candidates.py  cut_roi_manifest_from_tiles.py  evaluate_models.py  export_ims_scene_points.py  extract_ims_maxproj.py  inspect_ims_metadata.py  prepare_test_subjects.py  qc_roi_sources.py  run_micro_roi_benchmark_suite.py  run_napari_ui.py  run_rbpms_point_probe.py  run_rbpms_projection_ablation.py  run_real_rbpms_probe.py  run_roi_benchmark.py  run_roi_benchmark_suite.py  search_local_truth_candidates.py  train_cellpose.py
src/: __init__.py  advisor_packet.py  analysis.py  atlas.py  atlas_subtypes.py  axon.py  blob_watershed.py  calibration.py  cell_segmentation.py  cohort.py  config.py  context.py  edits.py  figures.py  focus_detection.py  ims_io.py  interactions.py  io_ome.py  landmarks.py  manifest.py  methods.py  (+36 more)
(+81 files in other folders)
